added rings and submit form function as well as photo upload

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.47",
+    "@supabase/supabase-js": "^2.45.1",
     "dayjs": "^1.11.11",
     "locomotive-scroll": "^5.0.0-beta.13",
     "react": "^18.3.1",
